opam-version: "1.2"
name: "rameau"
version: "~unknown"
maintainer: "cedlemo <cedlemo@gmx.com>"
authors: "cedlemo <cedlemo@gmx.com>"
homepage: "https://github.com/cedlemo/rameau"
bug-reports: "https://github.com/cedlemo/rameau/issues"
license: "GPL3"
dev-repo: "https://github.com/cedlemo/rameau"
build: [["jbuilder" "build" "-p" name "-j" jobs]]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
depends: [
  "jbuilder" {build}
  "lwt"
  "ounit"
  "cmdliner"
  "notty"
  "libmpdclient"
  "logs"
]
