opam-version: "1.2"
name: "rameau"
version: "~unknown"
maintainer: "cedlemo <cedlemo@gmx.com>"
authors: "cedlemo <cedlemo@gmx.com>"
homepage: "https://github.com/cedlemo/rameau"
bug-reports: "https://github.com/cedlemo/rameau/issues"
license: "GPL3"
dev-repo: "https://github.com/cedlemo/rameau"
build: [["dune" "build" "-p" name "-j" jobs]]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]
depends: [
  "dune" {build}
  "lwt"
  "ounit"
  "cmdliner"
  "notty"
  "libmpdclient"
  "logs"
]
